Optimize Path::encode on platforms that support CGPathGetNumberOfElements https://bugs.webkit.org/show_bug.cgi?id=208266

Reviewed by Darin Adler and Simon Fraser.

Source/WebCore:

When encoding Path objects, we currently first encode the number of elements in the path by iterating over each
path element and incrementing a counter; then, we iterate over each element again, and encode information
(points, angles, etc.) for each path element.

However, on platforms that have the fix for <rdar://problem/59828724>, the first call to CGPathApply can be
skipped, since CoreGraphics can (in constant time, for the most part) simply tell us how many elements are in
the CGPath. See comments below for more details.

There should be no change in behavior.

* platform/graphics/Path.cpp:
* platform/graphics/Path.h:

Add an `elementCount` method on Path, which returns the count of elements in the path. On platforms where
CGPathGetNumberOfElements exists (and the fix for <rdar://problem/59828724> is also present), we return the
result of calling this SPI. Otherwise, fall back to mapping over each path element and incrementing a count.

(WebCore::Path::encode const):

Use the new `elementCount` method when encoding a WebCore::Path.

* platform/graphics/cg/PathCG.cpp:
(WebCore::Path::elementCount const):

Source/WebCore/PAL:

Add an SPI declaration for CGPathGetNumberOfElements.

* pal/spi/cg/CoreGraphicsSPI.h:


Canonical link: https://commits.webkit.org/221549@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257918 268f45cc-cd09-0410-ab3c-d52691b4dbfc