Source/WebCore/PAL/pal/spi/cg/CoreGraphicsSPI.h
@@ -42,6 +42,7 @@
 #include <ColorSync/ColorSyncPriv.h>
 #endif
 #include <CoreGraphics/CGFontCache.h>
+#include <CoreGraphics/CGPathPrivate.h>
 #include <CoreGraphics/CoreGraphicsPrivate.h>
 
 #else
@@ -248,6 +249,10 @@ void CGContextSetFontAntialiasingStyle(CGContextRef, CGFontAntialiasingStyle);
 bool CGContextGetAllowsFontSubpixelPositioning(CGContextRef);
 bool CGContextDrawsWithCorrectShadowOffsets(CGContextRef);
 CGPatternRef CGPatternCreateWithImage2(CGImageRef, CGAffineTransform, CGPatternTiling);
+
+#if HAVE(CGPATH_GET_NUMBER_OF_ELEMENTS)
+size_t CGPathGetNumberOfElements(CGPathRef);
+#endif
 
 #if HAVE(IOSURFACE)
 CGContextRef CGIOSurfaceContextCreate(IOSurfaceRef, size_t, size_t, size_t, size_t, CGColorSpaceRef, CGBitmapInfo);
